--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>DashBord</title>
   </head>
   <body>
-    <div id="app"></div>
+
+    <div class="container" id="container"></div>
+
+	<div class="pagination">
+		<button id="btnAnterior">Anterior</button>
+		<button id="btnSiguiente">Siguiente</button>
+	</div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
