--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
   <body>
 
+    <section><canvas id="mychart"></canvas></section>
+
+    <section><canvas id="mychart2"></canvas></section>
+
     <div class="container" id="container"></div>
 
 	<div class="pagination">
