se aplica modularizacion a la conexion de las API con las imagenes con la pelicula par de conserevar el documento main mas despejado, se trato de aplicar paginacion pero no da y no arroja ningun erro en cosola

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container" id="container"></div>
 
 	<div class="pagination">
-		<button id="btnAnterior">Anterior</button>
-		<button id="btnSiguiente">Siguiente</button>
+		<button id="btnBefore">Anterior</button>
+		<button id="btnNext">Siguiente</button>
 	</div>
 
     <script type="module" src="/main.js"></script>
