se crea paginacion para las peliculas hasta 7 paginas soliciando en cada pagina las 20 peliculas mas populares, segun la informacion de la API se puede crear hasta 1000 paginas; ademas se crea un boton que nos lleva a el Dashboar donde se visualizan 2 graficas : una cin el Top 10 de las peliculas mas votadas(barra) y otra co el top 10 de las pelicula mas populares(radio)

--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
   </head>
   <body>
 
-    <section><canvas id="mychart"></canvas></section>
-
-    <section><canvas id="mychart2"></canvas></section>
-
     <div class="container" id="container"></div>
 
 	<div class="pagination">
 		<button id="btnBefore">Anterior</button>
 		<button id="btnNext">Siguiente</button>
+    <button id="dashBord">DashBord</button>
 	</div>
 
     <script type="module" src="/main.js"></script>
