--- a/dashboard.html
+++ b/dashboard.html
@@ -13,9 +13,9 @@
     <section><canvas id="mychart"></canvas></section>
     <section><canvas id="mychart2"></canvas></section>
     <section class="loadButton">
-        <button id="buttonMovie">Peliculas</button>
+        <button id="button-movie">Peliculas</button>
     </section>    
-    <script type="module" src="/Peliculas.js"></script>
+    <script type="module" src="./peliculas.js"></script>
 
 </body>
 </html>
